--- a/index.html
+++ b/index.html
@@ -33,21 +33,35 @@
           <p class="error-message">Please set all the 3 goals!</p>
           <div id="goals">
             <div class="goal-box">
-              <input type="checkbox" name="" id="" class="checkbox" />
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat
-                quam voluptate temporibus mollitia aspernatur eos. Cum aliquam
-                quis necessitatibus eaque.
-              </p>
+              <img src="./assets/complete.png" alt="" class="hidden" />
+              <input type="radio" name="" task="1" class="checkbox" />
+              <input type="text" class="goal" task="1" placeholder="Goal 1" />
+            </div>
+            <div class="goal-box">
+              <img src="./assets/complete.png" alt="" class="hidden" />
+              <input
+                type="radio"
+                name=""
+                id="checkbox-2"
+                task="2"
+                class="checkbox"
+              />
+              <input type="text" class="goal" task="2" placeholder="Goal 1" />
+            </div>
+            <div class="goal-box">
+              <img src="./assets/complete.png" alt="" class="hidden" />
+              <input type="radio" name="" task="3" id="checkbox-2
+              class="checkbox" />
+              <input type="text" class="goal" task="3" placeholder="Goal 1" />
             </div>
           </div>
           <p class="last-para">“Move one step ahead, today!”</p>
           <footer>
-            <p class="f">Made with  ❤️ by Kartik Gothwal</p>
+            <p class="f">Made with ❤️ by Kartik Gothwal</p>
           </footer>
         </main>
       </div>
     </section>
   </body>
-  <script src="./index.js"></script>
+  <script src="./index.js" defer></script>
 </html>
