--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
           <div class="progress-bar-container">
             <div id="progress" style="width: 20%"></div>
           </div>
-          <p class="error-message">Please set all the 3 goals!</p>
+          <p class="error-message hidden">Please set all the 3 goals!</p>
           <div id="goals">
             <div class="goal-box">
               <img src="./assets/complete.png" alt="" class="hidden" />
               <input type="radio" name="" task="1" class="checkbox" />
-              <input type="text" class="goal" task="1" placeholder="Goal 1" />
+              <input type="text" class="goal input-text" task="1" placeholder="Goal 1" />
             </div>
             <div class="goal-box">
               <img src="./assets/complete.png" alt="" class="hidden" />
@@ -46,13 +46,18 @@
                 task="2"
                 class="checkbox"
               />
-              <input type="text" class="goal" task="2" placeholder="Goal 1" />
+              <input type="text" class="goal input-text" task="2" placeholder="Goal 1" />
             </div>
             <div class="goal-box">
               <img src="./assets/complete.png" alt="" class="hidden" />
-              <input type="radio" name="" task="3" id="checkbox-2
-              class="checkbox" />
-              <input type="text" class="goal" task="3" placeholder="Goal 1" />
+              <input
+                type="radio"
+                name=""
+                id="checkbox-2"
+                task="3"
+                class="checkbox"
+              />
+              <input type="text" class="goal input-text" task="3" placeholder="Goal3" />
             </div>
           </div>
           <p class="last-para">“Move one step ahead, today!”</p>
